<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">My Application</string>
    <string name="contact">聯絡人</string>
    <string name="contactView">H60</string>
    <string name="livehdView">LiveHD</string>
    <string name="title_activity_sip_login">LiveHD sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_rms_server">Server address</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="open_weather_maps_app_id">cb1fcd8f5c286afa85562acf6fbbdfd4</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="default_controller_name">[Searching for controller&#8230;]</string>
    <string name="data_not_found">-----</string>
    <string name="default_lamp_name">[Loading lamp info&#8230;]</string>
    <string name="no_network">Please check that Network is enabled in the device\'s settings, and that the device is connected to a network</string>
    <string name="waiting_network">Waiting for Network to become available&#8230;</string>
    <string name="no_controller">No controller service is available on the network</string>
    <string name="loading_controller">Searching for controller service&#8230;</string>
    <string name="no_lamps">No lamps have been detected on the network</string>
    <string name="loading_lamps">Searching for lamps&#8230;</string>
    <string name="no_support_dimmable">Changing brightness is not supported</string>
    <string name="no_support_color">Changing color is not supported</string>
    <string name="no_support_temp">Changing color temperature is not supported</string>
    <string name="saturation_disable_hue">Hue has no effect when saturation is at 0\u0025. Set saturation to greater than 0\u0025 to enable the hue slider</string>
    <string name="saturation_disable_temp">color temperature has no effect when saturation is at 100\u0025. Set saturation to less than 100\u0025 to enable the color temperature slider</string>
    <string name="na">n/a</string>
    <string name="units_mw">mw</string>
    <string name="units_percent">%</string>
    <string name="units_degrees">\u00b0</string>
    <string name="units_kelvin">K</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_welcome_msg">Welcome to</string>
    <string name="first_welcom_msg_minor">the world of IoT in Elife</string>
    <string name="main_title">Room Hub</string>
    <string name="main_desc">Make your family closer\nWelcome! Sign up and join a smart home.</string>
    <string name="user_account_desc">Username or Email</string>
    <string name="user_name_desc">User Name</string>
    <string name="password_desc">Password</string>
    <string name="login_str">Login</string>
    <string name="createAccount_str">Create Account</string>
    <string name="skip_str">Skip</string>
    <string name="back">Back</string>
    <string name="confirm_mail_sent">Email Sent</string>
    <string name="confirm_email">Check your email</string>
    <string name="confirm_email_hint1">We sent an email with a link to you,please check the link to continue the registration.</string>
    <string name="confirm_email_hint2"></string>
    <string name="confirm_email_hint3">Did not get email?</string>
    <string name="confirm_email_send_again">Send again</string>
    <string name="confirm_email_start_now">Account authorized, Login now?</string>
    <string name="confirm_email_has_sent">Email has been sent</string>
    <string name="account_format_error_msg">User account couldn\'t contain character \'@\'</string>
    <string name="wrong_wifi_connected_msg">Please connect to another correct WiFi AP and restart app</string>
    <string name="appliance">Appliance</string>
    <string name="healthcare">Health</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="drawer_menu">
        <item>Account</item>
        <item>Notification</item>
        <item>FAQ</item>
        <item>Settings</item>
    </string-array>
    <string name="signup_str">Sign Up</string>
    <string name="profile_str">Profile</string>
    <string name="account_str">Email</string>
    <string name="confirm_pass_str">Confirm Password</string>
    <string name="process_str">Connecting......</string>
    <string name="wrong_account_format_str">Wrong email format!!!</string>
    <string name="wrong_password_confirm_str">Please input the confirm password again!!!</string>
    <string name="profile_group">My Group</string>
    <string name="change_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="account_empty_error_msg">User account couldn\'t empty!!!</string>
    <string name="email_prompt">Please input email!!!</string>
    <string name="signup_email_hint">We will send verification to your Email</string>
    <string name="enter_new_pass">New Password</string>
    <string name="confirm_new_pass">Re-enter New Password</string>
    <string name="change_pass_result">Password has been changed successfully.</string>
    <string name="forget_pass_email_hint">We will send a new verification tor your Email</string>
    <string name="send">Send</string>
    <string name="password_len_wrong">Password must be at least 4 characters or numbers</string>
    <string name="wifi_list_title">Connect Wi-Fi</string>
    <string name="wifi_setup_str">Connect Wi-Fi</string>
    <string name="wifi_setup_desc">Please select your home WiFi to connect \n with your room hub. Press the button \n below for getting start.</string>
    <string name="search_wfi_str">Search Home WiFi</string>
    <string name="search_str">Searching...</string>
    <string name="search_title">Connect to Wifi</string>
    <string name="wifi_ap_setup_desc">Please input password to connect with </string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_connect_to">Connect to</string>
    <string name="signal_str">Signal intentsity</string>
    <string name="security_str">Security</string>
    <string name="showpass_str">Show Password</string>
    <string name="confirm_str">Confirm</string>
    <string name="wifi_connect_fail">Connect failed!!! Please recheck WiFi Network Name and password.</string>
    <string name="wifi_password_len_wrong_msg">Password length is 8 to 64 characters!</string>
    <string name="wifi_password_wep_len_wrong_msg">Password length is 5, 13 or 16 ASCII characters!</string>
    <string name="wifi_password_empty_wrong_msg">Password couldn\'t be empty!!!</string>
    <string name="wifi_password_max_length_msg">Password can\'t be no longer than 64 characters!</string>
    <string name="wifi_connect_same_wifi">You are connecting to current home WiFi.Please make sure password is correct otherwise the following process might not be done successfully.</string>
    <string name="wifi_prompt_skip_connect">Please make sure WiFi network name and password are correct or the following process might not be done successfully.</string>
    <string name="wifi_prompt_connect">If you want to use WiFi connection, press \'Yes\' to choose WiFi AP or press \'No\' to use Mobile connection.</string>
    <string name="login_account_hint">Enter your email</string>
    <string name="forget_pass_str">Forget Password</string>
    <string name="need_login_msg">Please login to activate this funcion. Login now?</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="forget_pass_success_str">Please receive mail from your email account</string>
    <string name="not_login_yet">Please login</string>
    <string name="prompt_overlay_permissions">Since Android 6.0 or later have some changes on privileges, we need you to authorize the following permission to continue after your press Back</string>
    <string name="logout_str">Logout</string>
    <string name="select_machine">Select model</string>
    <string name="rename">Rename</string>
    <string name="ac_pairing">A/C pairing</string>
    <string name="account">Account</string>
    <string name="add_device">Add Room Hub</string>
    <string name="settings">Settings</string>
    <string name="change_wifi_setup">Change WiFi</string>
    <string name="schedule_week_mon">Mon</string>
    <string name="schedule_week_tue">Tue</string>
    <string name="schedule_week_wed">Wed</string>
    <string name="schedule_week_thu">Thu</string>
    <string name="schedule_week_fri">Fri</string>
    <string name="schedule_week_sat">Sat</string>
    <string name="schedule_week_sun">Sun</string>
    <string name="time_setting">Time</string>
    <string name="time_to">to</string>
    <string name="time_repeat">Repeat?</string>
    <string name="auto">Auto</string>
    <string name="timing">Timer</string>
    <string name="turn_off_after">Turn off</string>
    <string name="wind">Fan speed</string>
    <string name="wind_low">Low</string>
    <string name="wind_med">Med</string>
    <string name="wind_high">High</string>
    <string name="swing">Swing</string>
    <string name="air_direction">Air Direction</string>
    <string name="advance_warning">Notice: These functions may not be applied to some models</string>
    <string name="advance_fix">Stop</string>
    <string name="advance_timeoff_clear">Clear</string>
    <string name="pref_title_temp_unit">Units</string>
    <string name="pref_title_notification">Notification</string>
    <string name="notification_title">Notification</string>
    <string name="feedback_title">FAQ</string>
    <string name="close_all_device">Close all devices</string>
    <string name="fan_controller_eco">ECO</string>
    <string name="fan_advance_mode_humidification">Dry</string>
    <string name="fan_advance_mode_ion">ION</string>
    <string name="fan_advance_mode_sleep">Sleep</string>
    <string name="fan_advance_mode_natural">Natural</string>
    <string name="app_version_info">Version Info</string>
    <string name="current_version">Current Version</string>
    <string name="air_mode_normal">Normal</string>
    <string name="air_mode_special">Special</string>
</resources>