<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.3dp"
            android:text="@string/time_setting"
            android:textColor="@color/color_white"
            android:textSize="@dimen/time_settings_title"/>
        <android.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="13dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_start_time"
                android:text="-- : --"
                style="@style/schedule_time_btn"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="@dimen/schedule_setting_text_height"
                android:text="@string/time_to"
                android:gravity="center"
                android:textColor="@color/color_dark_grayish_cyan"
                android:textSize="@dimen/time_settings_title"/>
            <Button
                android:id="@+id/btn_end_time"
                android:text="-- : --"
                style="@style/schedule_time_btn"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_week_mon"
            android:text="@string/schedule_week_mon"
            style="@style/schedule_setting_week_btn"/>
        <Button
            android:id="@+id/btn_week_tue"
            android:text="@string/schedule_week_tue"
            style="@style/schedule_setting_week_btn"/>
        <Button
            android:id="@+id/btn_week_wed"
            android:text="@string/schedule_week_wed"
            style="@style/schedule_setting_week_btn"/>
        <Button
            android:id="@+id/btn_week_thu"
            android:text="@string/schedule_week_thu"
            style="@style/schedule_setting_week_btn"/>
        <Button
            android:id="@+id/btn_week_fri"
            android:text="@string/schedule_week_fri"
            style="@style/schedule_setting_week_btn"/>
        <Button
            android:id="@+id/btn_week_sat"
            android:text="@string/schedule_week_sat"
            style="@style/schedule_setting_week_btn"/>
        <Button
            android:id="@+id/btn_week_sun"
            android:text="@string/schedule_week_sun"
            style="@style/schedule_setting_week_btn"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="13.3dp"
        android:layout_marginTop="14dp"
        android:gravity="right">
        <CheckBox
            android:id="@+id/cb_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_repeat"
            android:textColor="@color/color_white"
            android:textSize="@dimen/schedule_week"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>