<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/login_confirm_email_image_padding_bottom"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/icon_email_auth"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_email"
        android:textSize="@dimen/login_confirm_email_check_text_size"
        android:id="@+id/checkmail_textview"
        android:layout_marginTop="@dimen/login_confirm_email_check_padding_top"
        android:layout_below="@+id/imageView"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/login_confirm_email_hint_padding_top"
        android:text="@string/confirm_email_hint1"
        android:textSize="@dimen/login_confirm_email_hint_text_size"
        android:id="@+id/hint_textview1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_email_hint2"
        android:textSize="@dimen/login_confirm_email_hint_text_size"
        android:layout_gravity="center"
        android:id="@+id/hint_textview2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_email_hint3"
            android:textSize="@dimen/login_confirm_email_hint_not_get_mail_text_size"
            android:layout_marginBottom="@dimen/login_confirm_email_hint_padding_bottom"
            android:id="@+id/textView" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_page_image_edit_height"
            android:id="@+id/btn_send"
            android:background="@color/color_schedule_item_on"
            android:textColor="@color/color_white"
            android:textSize="@dimen/main_page_button_text_size"
            android:textAllCaps="false"
            android:text="@string/confirm_email_send_again" />

        <View android:layout_height="10dp" android:layout_width="match_parent" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_page_image_edit_height"
            android:id="@+id/btn_login"
            android:background="@drawable/salmon_background_selector"
            android:textColor="@color/color_white"
            android:textSize="@dimen/main_page_button_text_size"
            android:textAllCaps="false"
            android:text="@string/confirm_email_start_now" />

    </LinearLayout>
</RelativeLayout>