<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_advance_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_timer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:text="@string/timing"
            android:textColor="@color/color_white"
            android:textSize="@dimen/time_settings_title"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/advance_item_height"
            android:layout_marginTop="7.3dp"
            android:background="@color/color_advance_item"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <Button
                android:id="@+id/btn_turn_off"
                android:text="-- : --"
                android:layout_marginLeft="17dp"
                android:layout_weight="1"
                style="@style/schedule_time_btn"/>
            <android.widget.Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_off_after"
                android:layout_weight="20"
                android:textColor="@color/color_white"
                android:textSize="@dimen/schedule_mode"/>
            <Button
                android:layout_width="@dimen/advance_clear_btn_width"
                android:layout_height="@dimen/advance_clear_btn_height"
                android:layout_marginRight="17dp"
                android:id="@+id/btn_clear"
                android:text="@string/advance_timeoff_clear"
                android:textColor="@color/color_white"
                android:textSize="@dimen/custom_dialog_font_size"
                android:background="@drawable/salmon_background_selector"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.3dp"
        android:layout_marginLeft="17dp"
        android:text="@string/wind"
        android:textColor="@color/color_white"
        android:textSize="@dimen/time_settings_title"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/advance_item_height"
        android:layout_marginTop="6dp"
        android:background="@color/color_advance_item"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll_fan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txt_wind_low"
                    android:layout_width="@dimen/advance_fan_bar_title_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/time_settings_title"
                    android:text="@string/wind_low"/>
                <TextView
                    android:id="@+id/txt_wind_med"
                    android:layout_width="@dimen/advance_fan_bar_title_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/time_settings_title"
                    android:text="@string/wind_med"/>
                <TextView
                    android:id="@+id/txt_wind_high"
                    android:layout_width="@dimen/advance_fan_bar_title_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/time_settings_title"
                    android:text="@string/wind_high"/>
                <TextView
                    android:id="@+id/txt_wind_auto"
                    android:layout_width="@dimen/advance_fan_bar_title_width"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/time_settings_title"
                    android:text="@string/auto"/>
            </LinearLayout>
            <SeekBar
                android:id="@+id/wind_seekbar"
                android:layout_width="@dimen/advance_fan_bar_width"
                android:layout_height="@dimen/advance_fan_bar_height"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="21dp"
                android:maxWidth="@dimen/advance_fan_bar_max_width"
                android:progressDrawable="@null"
                android:thumbOffset="15dp"
                android:maxHeight="@dimen/advance_fan_bar_max_height"
                android:thumb="@drawable/bar_button"
                android:background="@drawable/wind_bar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_fan_toggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/btn_speed"
                android:layout_width="@dimen/fan_swing_toggle_btn_size"
                android:layout_height="@dimen/fan_swing_toggle_btn_size"
                android:background="@drawable/fan_speed_btn_selector"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.3dp"
        android:layout_marginLeft="17dp"
        android:text="@string/air_direction"
        android:textColor="@color/color_white"
        android:textSize="@dimen/time_settings_title"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/advance_item_height"
        android:layout_marginTop="7.3dp"
        android:background="@color/color_advance_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_auto"
            android:layout_width="@dimen/advance_fankey_btn_width"
            android:layout_height="@dimen/advance_fankey_btn_height"
            android:layout_marginLeft="17dp"
            android:text="@string/swing"
            android:textColor="@color/color_white"
            android:textSize="@dimen/time_settings_title"
            android:textAllCaps="false"
            android:background="@drawable/controller_btn_selector"/>
        <Button
            android:id="@+id/btn_fix"
            android:layout_width="@dimen/advance_fankey_btn_width"
            android:layout_height="@dimen/advance_fankey_btn_height"
            android:text="@string/advance_fix"
            android:textColor="@color/color_white"
            android:textSize="@dimen/time_settings_title"
            android:textAllCaps="false"
            android:background="@drawable/controller_btn_selector"/>
    </LinearLayout>

    <include
        android:id="@+id/advance_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/advance_notice"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.3dp"
        android:layout_marginLeft="13.3dp"
        android:text="@string/advance_warning"
        android:gravity="center"
        android:textColor="@color/color_dark_grayish_cyan"
        android:textSize="@dimen/advance_warning_font_size"/>
</LinearLayout>